--- a/conference_rooms/reservation_system/templates/web_parts/header.html
+++ b/conference_rooms/reservation_system/templates/web_parts/header.html
@@ -1,6 +1,7 @@
 <header>
-    <img src="" alt="LOGO">
     <nav>
+        <nav>
         {% include 'web_parts/navigation.html' %}
+        </nav>
     </nav>
 </header>
