--- a/conference_rooms/reservation_system/templates/web_parts/head.html
+++ b/conference_rooms/reservation_system/templates/web_parts/head.html
@@ -1,4 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Conference Rooms{% endblock %}</title>
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
