--- a/conference_rooms/reservation_system/templates/web_parts/head.html
+++ b/conference_rooms/reservation_system/templates/web_parts/head.html
@@ -1,6 +1,7 @@
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Conference Rooms{% endblock %}</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
